Wiring Contact Done

--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "react-dom": "^17.0.2",
     "react-helmet-async": "^1.0.9",
     "react-icons": "^4.2.0",
+    "react-loading-skeleton": "^2.2.0",
     "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "react-skeleton-loading": "^1.0.0",
-    "react-useanimations": "^2.0.6",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.16.1",
