--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# hosting
+.firebaserc
+firebase.json
+.firebase/
+
 # dependencies
 /node_modules
 /.pnp
